sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value ecart
  ecart = getNombreValeurs();
  ^AlgCombSort:10: error: not found: value ecart
    if(ecart > 1){
       ^AlgCombSort:11: error: not found: value ecart
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int];
      ^AlgCombSort:14: error: not found: value i
    i = 0
    ^AlgCombSort:16: error: not found: value i
    while(i + ecart < getNombreValeurs()){
          ^AlgCombSort:16: error: not found: value ecart
    while(i + ecart < getNombreValeurs()){
              ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+1,i)){
                   ^AlgCombSort:17: error: not found: value i
      if(plusPetit(i+1,i)){
                       ^AlgCombSort:18: error: not found: value i
        echange(i, i+1);
                ^AlgCombSort:18: error: not found: value i
        echange(i, i+1);
                   ^AlgCombSort:19: error: not found: value i
        i = i +1;
        ^AlgCombSort:24: error: not found: value ecart
  } while(ecart >1 || trier)
          ^