sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  
  var trier:Boolean=false;
  ecart = getNombreValeurs();
  
  do{
    trier = false
    
    if(ecart > 1){
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int];
    }
    
    i = 0
    
    while(i + ecart < getNombreValeurs()){
      if(plusPetit(i+1,i)){
        echange(i, i+1);
        i = i +1;
        trier = true;
      }
    }
    
  } while(ecart >1 || trier)
  
}